# exo_planets_classification

./: README.md  autoencoder_model.py  main.py  nan_imputer.joblib  pyproject.toml  scaler_exoplanet.joblib  xgb_exoplanet.joblib  xgboost_model.py
.streamlit/: config.toml
frontend/: autoencoder_model.py  xgboost_model.py
frontend/models/: autoencoder_exo_planet.keras
ml_models/: autoencoder.ipynb  light_download.py  xg_boost.ipynb
nasa_data/: tess.csv
utils/: autoencoder_pipelone.py
